opam-version: "1.2"
name: "yaml"
synopsis: "Native OCaml parsing and pretty-printing for the YAML format"
license: "CeCILL-B"
version: "1.0"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Matthieu Wipliez <Matthieu.Wipliez@insa-rennes.fr"
homepage: "https://github.com/ghuysmans/yaml/"
bug-reports: "https://github.com/ghuysmans/yaml/issues"
dev-repo: "git+https://github.com/ghuysmans/yaml/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
]
